--- a/configuration.properties
+++ b/configuration.properties
@@ -2,4 +2,6 @@ browser=chrome
 meetsky.url = https://qa.meetsky.net/index.php/login?clear=1
 meetsky.username = Employee21
 meetsky.password = Employee123
+meetsky.username.kemal=Employee101
+meetsky.password.kemal = Employee123
 expected.title = Dashboard - QA - Meetsky
