--- a/configuration.properties
+++ b/configuration.properties
@@ -5,3 +5,4 @@ meetsky.password = Employee123
 meetsky.username.kemal=Employee101
 meetsky.password.kemal = Employee123
 expected.title = Dashboard - QA - Meetsky
+Kemal = 123
