I added my login credentials

--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,5 @@ meetsky.username.kemal=Employee101
 meetsky.password.kemal = Employee123
 expected.title = Dashboard - QA - Meetsky
 Kemal = 123
+meetsky.username.guzel = Employee131
+meetsky.password.guzel = Employee123
