--- a/configuration.properties
+++ b/configuration.properties
@@ -3,3 +3,5 @@ meetsky.url = https://qa.meetsky.net/index.php/login?clear=1
 meetsky.username = Employee21
 meetsky.password = Employee123
 expected.title = Dashboard - QA - Meetsky
+meetsky.username.selcuk = Employee111
+
