--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
 browser=chrome
 meetsky.url = https://qa.meetsky.net/index.php/login?clear=1
-meetsky.username = Employee21
-meetsky.password = Employee123
+meetsky.username.neva = Employee121
+meetsky.password.neva = Employee123
 expected.title = Dashboard - QA - Meetsky
