--- a/configuration.properties
+++ b/configuration.properties
@@ -8,3 +8,4 @@ expected.title = Dashboard - QA - Meetsky
 meetsky.username.selcuk = Employee111
 meetsky.username.guzel = Employee131
 meetsky.password.guzel = Employee123
+meetsky.selcuk.newfoldername=Spring
