Nazli- Online status func.

--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,4 @@ meetsky.username.kemal=Employee101
 meetsky.password.kemal = Employee123
 expected.title = Dashboard - QA - Meetsky
 Kemal = 123
+meetsky.username.nazli=Employee11
