--- a/configuration.properties
+++ b/configuration.properties
@@ -8,3 +8,5 @@ expected.title = Dashboard - QA - Meetsky
 meetsky.username.selcuk = Employee111
 meetsky.username.guzel = Employee131
 meetsky.password.guzel = Employee123
+meetsky.username.yasemin = Employee81
+
